# supervisor-agent

./: .env.example  LICENSE  README.md  pyproject.toml
supervisor_agent/: copywriter.py  main.py  researcher.py  schemas.py  state.py  supervisor.py
supervisor_agent/example_content/: linkedin.md
supervisor_agent/prompts/: copywriter.md  researcher.md  supervisor.md
