[project]
name = "supervisor-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "langchain-groq>=1.1.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.9",
    "langgraph-supervisor>=0.0.31",
    "pip-system-certs>=5.3",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
